syntax = "proto3";

package xyz.block.ftl.pubsub.v1;

import "xyz/block/ftl/schema/v1/schema.proto";
import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/pubsub/v1;ftlv1";
option java_multiple_files = true;

message PublishEventRequest {
  ftl.schema.v1.Ref topic = 1;
  bytes body = 2;
  // Only verb name is included because this verb will be in the same module as topic
  string caller = 3;
}

message PublishEventResponse {}

message ResetSubscriptionRequest {
  ftl.schema.v1.Ref subscription = 1;
}
message ResetSubscriptionResponse {}

// LegacyPubsubService is the service that modules use to interact with the Controller.
service LegacyPubsubService {
  // Ping service for readiness.
  rpc Ping(xyz.block.ftl.v1.PingRequest) returns (xyz.block.ftl.v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Publish an event to a topic.
  rpc PublishEvent(PublishEventRequest) returns (PublishEventResponse);

  // Reset the cursor for a subscription to the head of its topic.
  rpc ResetSubscription(ResetSubscriptionRequest) returns (ResetSubscriptionResponse);
}
